# VSCODE-CPP-CMake-GTest

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: drawing.h
lib/: CMakeLists.txt  drawing.cpp
tests/: CMakeLists.txt  drawing_test.cpp  test_fixture.cpp
